--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,20 +4,19 @@
 
 :root {
   --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 0, 0, 0;
-  --background-end-rgb: 31, 39, 37;
+  --background-start-rgb: 17, 24, 39;
+  --background-end-rgb: 0, 0, 0;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: rgb(var(--background-end-rgb));
-  /* background-repeat: no-repeat; */
-  /* background: linear-gradient(
+  background-repeat: no-repeat;
+  background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb)); */
+    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
